--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,30 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: generic-server
+  name: status-code-server
   namespace: default
   labels:
-    app: generic-server
+    app: status-code-server
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: generic-server
+      app: status-code-server
   template:
     metadata:
       labels:
-        app: generic-server
+        app: status-code-server
     spec:
       containers:
-      - name: generic-server
-        image: docker.io/pszeto/generic-server
+      - name: status-code-server
+        image: docker.io/pszeto/status-code-server
         imagePullPolicy: Always
         env:
         - name: HTTP_PORT
           value: "8080"
         - name: HTTPS_PORT
           value: "8443"
-        - name: SERVER_TYPE
-          value: GENERIC         
+        - name: STATUS_CODE
+          value: "503"         
         ports:
-        - containerPort: 9000
+        - containerPort: 8080
+        - containerPort: 8443
